# rag-chatbot-project

./: .gitignore  README.md  TABLE_ENHANCEMENT_README.md  app.py  crawl.py  file_loader.py  main.py  pyproject.toml  rag.py  rag_class.py  requirements.txt  setting.py  utils.py  vectorstore.py
src/: WDM_INTEGRATION_SUMMARY.md  app.py  demo_pdf_processing.py  file_loader.py  prompts.py  rag_class.py  setting.py  vectorstore.py
src/WDMParser/: WDMParser.py  __init__.py  credential_helper.py  enrich.py  extract_tables.py  llm_feat.py  utils_retry.py
