[project]
name = "multimodal-rag-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "amazon-textract-helper>=0.0.34",
    "amazon-textract-response-parser>=1.0.3",
    "camelot-py>=1.0.0",
    "docling>=2.15.1",
    "docling-core>=2.30.1",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "gmft>=0.4.1",
    "google>=3.0.0",
    "google-genai>=1.15.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langchain-google-vertexai>=2.0.24",
    "langchain-huggingface>=0.2.0",
    "langchain-milvus>=0.1.10",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.4",
    "llama-index>=0.10.9",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pdftext>=0.6.2",
    "pymupdf>=1.26.0",
    "python-levenshtein>=0.27.1",
    "reportlab>=4.4.1",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "tesseract>=0.1.3",
    "together>=1.3.14",
    "tools>=1.0.2",
    "unstructured[all-docs]>=0.17.2",
]

[tool.uv.workspace]
members = [
    "WDM-AI-TEMIS",
]
